# curves

./: CMakeLists.txt  circle.cpp  circle.h  curve.h  ellipse.h  helix.cpp  helix.h  main.cpp  test.cpp
app/src/: main.cpp
lib/include/: circle.h  ellipse.h  helix.h  util.h
lib/src/: circle.cpp  ellipse.cpp  helix.cpp
test/src/: test.cpp
